--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
-  "autoload": {
-    "classmap": ["generated-classes/"]
-  }
+    "require": {
+        "propel/propel": "~2.0@dev"
+    },
+    "autoload": {
+	"classmap": ["generated-classes/"]
+    }
 }
